--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,7 +46,7 @@ jobs:
         run: docker build . --file dockerfile --tag $IMAGE_NAME
 
       - name: Log into registry
-        run: echo "${{DOCKERHUB_PASSWORD}}" | docker login -u ${{DOCKERHUB_USERNAME}} --password-stdin
+        run: echo "${DOCKERHUB_PASSWORD}" | docker login -u ${{DOCKERHUB_USERNAME}} --password-stdin
 
       - name: Push image
         run: |
