--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     - name: Build the Docker image
-      run: docker build . --file dockerfile --tag teocristescu/cicd07:$(date +%s)
+      run: docker build . --file dockerfile --tag teocristescu/cicd07:test1
       
     - name: Docker Push
       run: docker push teocristescu/cicd07
