--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,6 +22,7 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     - name: Build the Docker image
       run: docker build . --file dockerfile --tag teocristescu/cicd07:test1
+    - run: docker tag teocristescu/cicd07 teocristescu/cicd07:test1
       
     - name: Docker Push
       run: docker push teocristescu/cicd07
