--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,8 +21,8 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     - name: Build the Docker image
-      run: docker build . --file dockerfile --tag teocristescu/cicd07:test1
-    - run: docker tag teocristescu/cicd07 teocristescu/cicd07:test1
+      run: docker build . --file dockerfile --tag teocristescu/cicd07:latest
+    - run: docker tag teocristescu/cicd07:latest teocristescu/cicd07:test1
       
     - name: Docker Push
-      run: docker push teocristescu/cicd07
+      run: docker push teocristescu/cicd07:test1
