--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,4 +25,4 @@ jobs:
     - run: docker tag teocristescu/cicd07:latest teocristescu/cicd07:${GITHUB_SHA:0:7}
   
     - name: Docker Push
-      run: docker push teocristescu/cicd07
+      run: docker push teocristescu/cicd07:${GITHUB_SHA:0:7}
